--- a/src/css/Home.module.css
+++ b/src/css/Home.module.css
@@ -103,6 +103,9 @@
     width: 40px;
     background-color: var(--search-box-color);
     border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .userIcon * {
